layout issues in who is using this channel

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -391,9 +391,6 @@ md-list-item>md-button {
     text-align: center;
 }
 
-#vertical-container {
-    height: 65%;
-}
 
 .progress-bar-purple {
     background-color: #773EB2;
